Bug #34429 (Output buffering cannot be turned off with FastCGI)