sapi/cgi/cgi_main.c
@@ -1205,6 +1205,8 @@ consult the installation file that came with this distribution, or visit \n\
 				running--;
 			}
 		}
+	} else {
+		parent = 0;
 	}
 
 #endif /* WIN32 */
